tests/NormalTests/paczka1/small_fuzzy/31876686.err
Error in line 1: S871 S218 84,7
Error in line 3: tkHW8eBEY S871 71,5
Error in line 6: S871 S218 87,2
